samples/_failures_safe/1761518528_29242d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0d3731c.c: In function ‘main’:
./samples/SAFE/__tmp_c0d3731c.c:150:25: error: invalid initializer
  150 |     Buffer compressed = compress_data
      |                         ^~~~~~~~~~~~~
./samples/SAFE/__tmp_c0d3731c.c:150:5: error: expected ‘,’ or ‘;’ at end of input
  150 |     Buffer compressed = compress_data
      |     ^~~~~~
./samples/SAFE/__tmp_c0d3731c.c:150:5: error: expected declaration or statement at end of input
